# jinamp

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  bootstrap  conffile.l  config.h.in  config.status  configure  configure.ac  configure.scan  control.c  control.h  debug.c  debug.h  jinamp-ctl.1  jinamp-ctl.c  jinamp.1  jinamp.c  list.c  list.h  load.c  load.h  memset.c  misc.c  misc.h  mkinstalldirs  options.c  options.h  parse.y  playaudio  release  set.c  set.h  (+4 more)
debian/: .cvsignore  changelog  control  copyright  rules
